Added Dictionary mapping, refactored Mappers

--- a/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
+++ b/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
@@ -121,6 +121,9 @@
   <data name="MappingCollections" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>mappingcollections.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="MappingDictionaries" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>mappingdictionaries.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="MappingFromAttributes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>mappingfromattributes.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
