Added optional section name override

--- a/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
+++ b/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
@@ -133,4 +133,7 @@
   <data name="MappingSimpleExamples" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>mappingsimpleexamples.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SpecifyingTheSectionName" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>specifyingthesectionname.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
