--- a/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
+++ b/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
@@ -139,4 +139,7 @@
   <data name="SpecifyingTheSectionName" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>SpecifyingTheSectionName.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="UsingCustomMappers" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>UsingCustomMappers.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
