Added section name conventions

--- a/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
+++ b/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
@@ -136,6 +136,9 @@
   <data name="MappingSimpleExamples" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>MappingSimpleExamples.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SectionNameConventions" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>SectionNameConventions.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SpecifyingTheSectionName" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>SpecifyingTheSectionName.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
