--- a/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
+++ b/Nerdle.AutoConfig.Tests.Integration/ConfigExamples.resx
@@ -133,6 +133,9 @@
   <data name="MappingInternalTypes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>MappingInternalTypes.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="MappingKeyedCollections" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>MappingKeyedCollections.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="MappingNestedComplexTypes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>MappingNestedComplexTypes.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
